[gd_scene load_steps=9 format=3 uid="uid://dmm1nqpm12gli"]

[ext_resource type="Texture2D" uid="uid://cp6hndlpa26yc" path="res://assets/imported/resources/graphics/car/main.png" id="1_d6qt0"]
[ext_resource type="Script" path="res://scenes/enemies/car.gd" id="1_l7t0r"]
[ext_resource type="Texture2D" uid="uid://xp1u4gbk013k" path="res://assets/imported/resources/graphics/car/turret.png" id="3_630ck"]
[ext_resource type="Texture2D" uid="uid://bo72f6aw8okgo" path="res://assets/imported/resources/graphics/explosions/gun.png" id="4_4magw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_phbft"]
radius = 751.024

[sub_resource type="Animation" id="Animation_uoci8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Turret/GunFire1_Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Turret/GunFire2_Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mf8f2"]
resource_name = "laser_load"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4333, 1, 1.5, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 1.0, 10.0, 20.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.433333, 1, 1.5, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 1.0, 10.0, 20.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Turret/GunFire1_Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Turret/GunFire2_Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wywd"]
_data = {
"RESET": SubResource("Animation_uoci8"),
"laser_load": SubResource("Animation_mf8f2")
}

[node name="Car" type="PathFollow2D"]
script = ExtResource("1_l7t0r")

[node name="Car_Body" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Car_Body"]
polygon = PackedVector2Array(-69, -133, -95, -177, -161, -181, -229, -174, -234, -143, -232, -119, -225, -107, -207, -94, -230, -79, -266, -57, -299, -30, -298, 30, -287, 40, -272, 51, -234, 50, -235, 82, -211, 94, -227, 107, -241, 134, -229, 174, -164, 182, -100, 177, -56, 131, 6, 173, 58, 178, 115, 173, 157, 159, 188, 86, 192, -34, 189, -99, 151, -163, 108, -175, 60, -178, 7, -169, 0, -124)

[node name="Car_ Sprite2D" type="Sprite2D" parent="Car_Body"]
rotation = 1.5708
texture = ExtResource("1_d6qt0")

[node name="Attack_Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Area2D"]
shape = SubResource("CircleShape2D_phbft")
debug_color = Color(0.901065, 0.28841, 0.3062, 0.42)

[node name="Turret" type="Node2D" parent="."]

[node name="Turret_Sprite2D" type="Sprite2D" parent="Turret"]
position = Vector2(-62, -4)
rotation = 1.5708
texture = ExtResource("3_630ck")

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
position = Vector2(47, -31)
target_position = Vector2(700, 2)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D"]
points = PackedVector2Array(3, 0, 699, 2)
width = 1.0
default_color = Color(0.976046, 0.28588, 0, 1)

[node name="RayCast2D2" type="RayCast2D" parent="Turret"]
position = Vector2(50, 25)
target_position = Vector2(698, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D2"]
points = PackedVector2Array(0, 0, 697, 0)
width = 1.0
default_color = Color(0.976471, 0.286275, 0, 1)

[node name="GunFire1_Sprite2D" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(111, -30)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_4magw")

[node name="GunFire2_Sprite2D" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(109, 24)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_4magw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4wywd")
}

[connection signal="body_entered" from="Attack_Area2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="Attack_Area2D" to="." method="_on_attack_area_2d_body_exited"]
